# esp32_trmnl_firmware

./: .gitignore  Cargo.toml  README.md  build.rs  devenv.nix
.cargo/: config.toml
.devcontainer/: devcontainer.json
.zed/: settings.json
src/: epaper.rs  http.rs  main.rs  status.rs  trmnl.rs  wifi.rs
