[package]
edition = "2024"
name = "esp32"
version = "0.1.0"

[package.metadata.embedded-config]
path = "build_cfg.toml"

[[bin]]
name = "atrmnl"
test = false
path = "./src/main.rs"

[dependencies]
embassy-net = { version = "0.6.0", features = [
  "dhcpv4",
  "medium-ethernet",
  "tcp",
  "udp",
  "dns",
] }
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
esp-alloc = { version = "0.6.0" }
esp-backtrace = { version = "0.15.0", features = [
  "esp32c6",
  "exception-handler",
  "panic-handler",
  "println",
] }
esp-hal = { version = "0.23.1", features = [
  "esp32c6",
  "unstable",
  "flip-link",
] }
esp-println = { version = "0.13.0", features = ["esp32c6", "log"] }
log = { version = "0.4.21" }
smoltcp = { version = "0.12.0", default-features = false, features = [
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }
# for more networking protocol support see https://crates.io/crates/edge-net
critical-section = "1.2.0"
embassy-executor = { version = "0.7.0", features = ["nightly"] }
embassy-time = { version = "0.4.0", features = ["generic-queue-8"] }
esp-hal-embassy = { version = "0.6.0", features = ["esp32c6"] }
esp-wifi = { version = "0.12.0", default-features = false, features = [
  "esp-alloc",
  "esp32c6",
  "log",
  "utils",
  "wifi",
] }
heapless = { version = "0.8.0", default-features = false, features = ["serde"] }
static_cell = { version = "2.1.0", features = ["nightly"] }
rand_core = { version = "0.6.4", default-features = false }

epd-waveshare = { path = "vendored/epd-waveshare", default-features = false, features = [
  "epd2in13_v2",
  "graphics",
] }
embedded-config = { git = "https://github.com/killerfoxi/embedded-config.git" }
reqwless = { path = "vendored/reqwless", features = ["embedded-tls", "log"] }
embassy-sync = "0.6.2"
smart-leds = "0.4.0"
embedded-graphics = "0.8.1"
embedded-hal = "1.0.0"
embedded-hal-bus = "0.3.0"
esp-hal-smartled = { git = "https://github.com/esp-rs/esp-hal-community.git" }
tinyqoi = "0.2.0"
serde = { version = "1.0.218", default-features = false, features = ["derive"] }
serde-json-core = "0.6.0"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false

[profile.release.package.esp-wifi]
opt-level = 3
