[package]
edition = "2024"
name = "esp32_trmnl_firmware"
version = "0.1.0"

[package.metadata.embedded-config]
path = "build_cfg.toml"

[[bin]]
name = "atrmnl"
test = false
path = "./src/main.rs"

[dependencies]
embassy-net = { version = "0.7.1", features = [
  "dhcpv4",
  "medium-ethernet",
  "tcp",
  "udp",
  "dns",
] }
embassy-executor = { version = "0.7.0", features = ["nightly"] }
embassy-time = { version = "0.4.0", features = ["generic-queue-8"] }
embassy-sync = "0.7.2"

embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
embedded-graphics = "0.8.1"
embedded-hal = "1.0.0"
embedded-hal-bus = "0.3.0"

esp-alloc = { version = "0.8.0" }
esp-backtrace = { version = "0.17.0", features = [
  "esp32c6",
  "exception-handler",
  "panic-handler",
  "println",
] }
esp-hal = { version = "1.0.0-rc.0", features = [
  "esp32c6",
  "unstable",
  "log-04",
] }
esp-println = { version = "0.15.0", features = ["esp32c6", "log-04"] }
esp-wifi = { version = "0.15.0", features = [
  "esp-alloc",
  "esp32c6",
  "log-04",
  "smoltcp",
  "wifi",
] }
esp-hal-embassy = { version = "0.9.0", features = ["esp32c6", "log-04"] }

log = { version = "0.4.27" }
smoltcp = { version = "0.12.0", default-features = false, features = [
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }
# for more networking protocol support see https://crates.io/crates/edge-net
critical-section = "1.2.0"
heapless = { version = "0.9.1", default-features = false, features = ["serde"] }
static_cell = { version = "2.1.1", features = ["nightly"] }
rand_core = { version = "0.9.3", default-features = false }

epd-waveshare = { path = "vendored/epd-waveshare", default-features = false, features = [
  "epd2in13_v2",
  "graphics",
] }
embedded-config = { git = "https://github.com/killerfoxi/embedded-config.git" }
reqwless = { path = "vendored/reqwless", features = ["embedded-tls", "log"] }
smart-leds = "0.4.0"
esp-hal-smartled = { git = "https://github.com/esp-rs/esp-hal-community.git" }
tinyqoi = "0.2.0"

serde = { version = "1.0.219", default-features = false, features = ["derive"] }
serde-json-core = "0.6.0"
esp-bootloader-esp-idf = { version = "0.2.0", features = ["log-04", "esp32c6"] }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false

[profile.release.package.esp-wifi]
opt-level = 3
