[package]
edition = "2024"
name = "esp32_trmnl_firmware"
version = "0.1.0"

[package.metadata.embedded-config]
path = "build_cfg.toml"

[[bin]]
name = "atrmnl"
test = false
path = "./src/main.rs"

[dependencies]
embassy-net = { version = "0.9.1", features = [
  "dhcpv4",
  "medium-ethernet",
  "tcp",
  "udp",
  "dns",
] }
embassy-executor = { version = "0.10.0", features = ["nightly"] }
embassy-time = { version = "0.5.1", features = ["generic-queue-8"] }
embassy-sync = "0.8.0"

embedded-io-async = "0.7.0"
embedded-graphics = "0.8.2"
embedded-hal = "1.0.0"
embedded-hal-bus = "0.3.0"

esp-alloc = { version = "0.10.0" }
esp-backtrace = { version = "0.19.0", features = [
  "esp32c6",
  "panic-handler",
  "println",
] }
esp-hal = { version = "1.1.1", features = [
  "esp32c6",
  "unstable",
  "log-04",
] }
esp-println = { version = "0.17.0", features = ["esp32c6", "log-04"] }
esp-radio = { version = "0.18.0", features = [
  "esp-alloc",
  "esp32c6",
  "log-04",
  "unstable",
  "wifi",
] }
esp-rtos = { version = "0.3.0", features = [
  "embassy",
  "esp-alloc",
  "esp-radio",
  "esp32c6",
  "log-04",
] }

log = { version = "0.4.29" }
smoltcp = { version = "0.13.1", default-features = false, features = [
  "medium-ethernet",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-tcp",
  "socket-udp",
] }
# for more networking protocol support see https://crates.io/crates/edge-net

heapless = { version = "0.9.3", default-features = false, features = ["serde"] }
static_cell = { version = "2.1.1", features = ["nightly"] }


epd-waveshare = { version = "0.6.0", default-features = false, features = [
  "epd2in13_v2",
  "graphics",
] }
embedded-config = { git = "https://github.com/killerfoxi/embedded-config.git" }
reqwless = { version = "0.14.0", features = ["embedded-tls", "log"] }
esp-hal-smartled2 = { version = "0.28.1", features = ["esp32c6"] }
smart-leds = "0.4.0"

tinyqoi = "0.2.0"

serde = { version = "1.0.228", default-features = false, features = ["derive"] }
serde-json-core = "0.6.0"
esp-bootloader-esp-idf = { version = "0.5.0", features = ["log-04", "esp32c6"] }
der = { version = "0.8.0", features = ["heapless"] }

[patch.crates-io]
esp-hal-smartled2 = { path = "vendored/esp-hal-smartled2" }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false

[profile.release.package.esp-radio]
opt-level = 3
